@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1034 2009/09/28 13:11:45 ub Exp $
+# $Id: CHANGES,v 1.1035 2009/09/29 11:48:55 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -31,6 +31,13 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.5 (2009/??/??)
+  - (2009/09/29) Fixed bug#4341 - RTE is not coupled with RichTextViewing. Rich
+     text is being shown, even if the text/plain MIME part is available.
+     Added new config option to force rich text viewing in ticket zoom.
+
+     SysConfig -> Ticket -> Frontend::Agent::Ticket::ViewZoom ->
+      -=> Ticket::Frontend::ZoomRichTextForce
+
  - (2009/09/28) Fixed bug#4269 - Softwareerror in stats module after uninstall
     ITSMIncidentProblemManagement
  - (2009/09/28) Fixed bug#4341 - No HighlightColors configured fills up OTRS log
